2006-12-22  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix initialization order and code cleanup.
	* src/userver.cc (ctor): Fix initialization order.
	  Some code cleanup (including using ++iterator instead of iterator++
	  where possible).

2006-12-22  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix includes.
	* src/ucommand.hh: Move cstdarg to.
	* src/ucommand.cc: ... Here.
	* src/userver.hh: Include cstdarg.

2006-12-22  Akim Demaille  <demaille@gostai.com>

	Clean up
	* src/ucommand.cc (debug, DEBUG_ATTR, to_string): New.
	(nodeType_foreach, nodeType_for, nodeType_loopn): Merge into...
	(nodetype): this.
	Extend for WHILE.
	Use them all.
	Remove useless parens.
	Rename iterators.
	Shorten scopes.

2006-12-22  Akim Demaille  <demaille@gostai.com>

	Clean up
	* src/ubinder.hh, src/ubinder.cc: Here.
	Use simple iterator names.

2006-12-22  Akim Demaille  <demaille@gostai.com>

	debug (va_list)
	* src/userver.hh, src/userver.cc (debug): One more version,
	taking a va_list.

2006-12-21  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add a dirty workaround for bug #113.
	* src/uconnection.cc (UConnection::received): Here.

2006-12-21  Akim Demaille  <akim@lrde.epita.fr>

	buffer_t
	* src/ucommand.cc (buffer_t): New.
	Use it.
	(tmpbuffer): Rename as...
	(buf): this.
	Let's keep the names short.
	* src/ucommand.hh (MAXSIZE_TMPMESSAGE): Remove.
	Let's keep the headers simple.

2006-12-21  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix CLEANFILES.
	* Makefile.am,
	* src/Makefile.am (CLEANFILES): Add vc80.pdb (VC++ puts the equivalent
          of the debug stuff generated by -g in this file).

2006-12-20  Jean-Christophe Baillie  <baillie@gostai.com>

	urbivalid-up. 

2006-12-20  Jean-Christophe Baillie  <baillie@gostai.com>

	fix small bug in speed:0 modified assignment. 
	* src/ucommand.cc: fix behavior. No more 0=0.0001 ugly stuff.

2006-12-20  Jean-Christophe Baillie  <baillie@gostai.com>

        Fix ticket [111].