@@ -1,5 +1,11 @@
 2006-12-22  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
+	Leak less memory when adding an alias.
+	* src/userver.cc (UServer::addAlias): Leak only a string (char*, not
+	  std::string) instead of leaking that string plus an UString.
+
+2006-12-22  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
 	Fix initialization order and code cleanup.
 	* src/userver.cc (ctor): Fix initialization order.
 	  Some code cleanup (including using ++iterator instead of iterator++
